# isotomics

./: .gitignore  LICENSE  M1Output.csv  README.md  alanine Example Script.ipynb  environment.yml  molecular_model_output.csv  pyproject.toml
Input Data/: Example_Molecule_Input.csv  Experimental_Data_Input.csv  all_data_output.csv
Input Data/Experimental_Data/full_molecular_average/Smp/: 20221209_10_TTAS_C1-1_Rep_1.isox  20221209_11_TTAS_C1-1_Rep_2.isox
Input Data/Experimental_Data/full_molecular_average/Std/: 20221209_09_TTAS_Unlab_Rep_3.isox  20221209_13_TTAS_Unlab_Rep_1.isox  20221209_15_TTAS_Unlab_Rep_3.isox
Input Data/Experimental_Data/full_relative_abundance/Smp/: 20221209_11_TTAS_C1-1_Rep_2.isox
Input Data/Experimental_Data/full_relative_abundance/Std/: 20221209_07_TTAS_Unlab_Rep_1.isox  20221209_09_TTAS_Unlab_Rep_3.isox  20221209_13_TTAS_Unlab_Rep_1.isox  20221209_15_TTAS_Unlab_Rep_3.isox
Output data/: all_data_output.csv
conda-recipe/: conda_build_config.yaml  meta.yaml
isotomics/: __init__.py  __main__.py  basicDeltaOperations.py  calcIsotopologues.py  dataAnalyzerMNIsoX.py  dataScreenIsoX.py  fragmentAndSimulate.py  organizeData.py  quickstart.py  readCSVAndSimulate.py  readInput.py  solveExperimentalData.py  solveSystem.py  spectrumVis.py
isotomics/input_data/: Alanine Experimental Errors.csv
isotomics/input_data/Experimental_Data/full_molecular_average/Smp/: 20221209_12_TTAS_C1-1_Rep_3.isox
isotomics/input_data/Isotopologue tsv files/: isotopologs44.tsv  isotopologsMolecularAverage.tsv
scripts/: quickstart.py
tests/: test_m1_solver.py
(+7 files in other folders)
