[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isotomics"
version = "0.1.1"
description = "M+1 data processing and simulation for Orbitrap-IRMS fragmentation experiments"
readme = "README.md"
requires-python = ">=3.10.12"
authors = [
  { name = "Timothy Csernica" },
  { name = "Sarah S. Zeichner" },
]
keywords = ["isotopologues", "isotope", "Orbitrap", "M+1", "IRMS"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.23.5",
  "pandas>=2.0.0",
  "tqdm",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.0",
  "networkx>=3.1",
  "sympy>=1.12",
  "scipy>=1.14.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
isotomics-quickstart = "isotomics.quickstart:main"

[tool.setuptools]
packages = ["isotomics"]
include-package-data = true

[tool.setuptools.package-data]
isotomics = ["input_data/**"]


